src/renderer/components/Dialog/styles.module.scss
$headerButtonSize: 30px;
$paddingHorizontal: 30px;
$paddingVertical: 20px;

.dialog {
  background-color: var(--bp4DialogBgPrimary);
  border-radius: 10px;
  box-shadow:
    0 0 0 1px rgba(16, 22, 26, 0.1),
    0 4px 8px rgba(16, 22, 26, 0.2),
    0 0 20px 3px rgba(16, 22, 26, 0.2);
  margin: 0;
  max-height: calc(100vh - 50px);
  max-width: 90vw;
  overflow: hidden;
  padding: 0;

  &.fixed {
    position: absolute;
    top: 25px;
    width: 400px;
  }
}

.dialogHeader {
  align-items: center;
  background-color: var(--bp4DialogHeaderBg);
  border-bottom: var(--outlineProperties);
  display: flex;
  padding-bottom: 20px;
  padding-left: $paddingHorizontal;
  padding-right: $paddingHorizontal - 5px;
  padding-top: $paddingVertical;
  user-select: none;
}

.dialogHeading {
  align-items: center;
  color: var(--bp4Heading);
  display: flex;
  flex: 1 1 auto;
  font-size: 18px;
  font-weight: 600;
  height: $headerButtonSize;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.dialogBody {
  background-color: var(--bp4DialogBgPrimary);
  max-height: 90vh;
  overflow: overlay;
  padding-bottom: $paddingVertical;
}

.dialogContent {
  padding-left: $paddingHorizontal;
  padding-right: $paddingHorizontal;

  &.paddingTop {
    padding-top: $paddingVertical;
  }

  &.paddingBottom {
    padding-bottom: $paddingVertical;
  }
}

.dialogFooter {
  background-color: var(--bp4DialogBgPrimary);
  padding-bottom: $paddingVertical;
  padding-left: $paddingHorizontal;
  padding-right: $paddingHorizontal;
}

.headerButton {
  align-items: center;
  background-color: transparent;
  border-radius: 5px;
  border: 0;
  color: var(--bp4DialogHeaderIcon);
  cursor: pointer;
  display: flex;
  height: $headerButtonSize;
  justify-content: center;
  padding: 0;
  width: $headerButtonSize;

  & + & {
    margin-left: 5px;
  }

  &:hover {
    background-color: var(--chatListItemBgHover);
  }
}

.headerButtonIcon {
  margin: 0 !important;
}

.backButton {
  margin-right: 20px;
}

.footerActions {
  display: flex;

  &.spaceBetween {
    justify-content: space-between;
  }

  &.start {
    justify-content: flex-start;
  }

  &.end {
    justify-content: flex-end;
  }

  &.center {
    justify-content: center;
  }
}

.footerActionButton {
  background-color: transparent;
  border: 0;
  border-radius: 5px;
  color: var(--colorPrimary);
  cursor: pointer;
  font-size: initial;
  font-weight: bold;
  letter-spacing: 2px;
  padding: 10px;
  text-transform: uppercase;

  &:hover {
    background-color: #f1f1f1;
  }

  &:disabled {
    color: grey;
    cursor: default;

    &:hover {
      background-color: transparent;
    }
  }

  & + & {
    margin-left: 1px;
  }

  &.danger {
    color: var(--colorDanger);
  }
}

